re PR c++/17585 (usage of unqualified name of static member from within class not allowed)

PR c++/17585
	* semantics.c (finish_id_expression): Do not add "this->" to
	static member functions.

	PR c++/17585
	* g++.dg/template/static8.C: New test.

From-SVN: r88174